iwlwifi: Avoid reset after failed handshake

Links:
 - https://bugzilla.kernel.org/show_bug.cgi?id=219968
 - https://bugzilla.kernel.org/attachment.cgi?id=307919&action=diff&collapsed=&headers=1&format=raw
 - https://github.com/zen-kernel/zen-kernel/issues/381